--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
 project(riscv)
-add_executable(code release.cpp)
+# add_executable(code release.cpp)
+add_executable(code test.cpp)
